--- a/TypeScript/package.json
+++ b/TypeScript/package.json
@@ -10,10 +10,10 @@
   },
   "author": "Daniel Perez <danipq26@gmail.com>",
   "devDependencies": {
-    "@types/jest": "^21.1.6",
-    "jest": "^21.2.1",
-    "ts-jest": "^21.2.2",
-    "tslint": "^5.9.1"
+    "@types/jest": "^23.3.10",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.6.0",
+    "tslint": "^5.11.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -38,6 +38,8 @@
   },
   "homepage": "https://github.com/sandromancuso/trip-service-kata",
   "dependencies": {
-    "typescript": "^2.6.1"
+    "cryptiles": "^4.1.3",
+    "merge": "^1.2.1",
+    "typescript": "^3.2.2"
   }
 }
